feat: add incident notifications
